Fixed phone overflow

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -5,7 +5,7 @@
   --headings-font-family: "Roboto";
 }
 
-body{
+html, body {
   overflow-x: hidden;
 }
 
